// Vitest Snapshot v1

exports[`Playingfield > should have no paused attribute when game is running 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="active"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
      viewBox="0 0 727.27 672.28"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M27.6 20.468l33.291 176.56c-25.782 43.408-40.424 93.001-40.424 145.65 0 170.698 153.612 309.13 343.014 309.13s343.314-138.432 343.314-309.13c0-51.001-14.048-99.068-38.344-141.488l33.29-176.267-140.3 65.096c-55.923-35.652-124.3-56.773-197.964-56.773-71.515 0-137.92 19.725-192.909 53.503L27.634 20.468z"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="40.9398"
      />
      <path
        d="M27.6 20.468l33.291 176.56c-25.782 43.408-40.424 93.001-40.424 145.65 0 170.698 153.612 309.13 343.014 309.13s343.314-138.432 343.314-309.13c0-51.001-14.048-99.068-38.344-141.488l33.29-176.267-140.3 65.096c-55.923-35.652-124.3-56.773-197.964-56.773-71.515 0-137.92 19.725-192.909 53.503L27.634 20.468z"
        fill="currentColor"
        stroke="#000"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="27.1430874"
      />
      <path
        d="M203.457 460.98c4.913 37.194 27.016 75.295 76.094 76.094 65.228 1.077 118.616-69.994 134.296-119.729-35.881-5.191-71.76-4.908-107.645-1.597 15.686 47.343 71.072 120.445 125.529 121.325 52.244.845 70.198-33.504 76.093-76.093"
        fill="none"
        stroke="#000"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="19.023360399999998"
      />
      <path
        d="M298.659 311.96c-13.149 29.225-47.5 42.257-76.724 29.109s-42.257-47.5-29.109-76.724 47.5-42.257 76.724-29.108 42.257 47.5 29.109 76.724z"
      />
      <path
        d="M283.686 294.838c-5.209 11.575-18.815 16.737-30.39 11.53s-16.739-18.815-11.53-30.391 18.814-16.738 30.39-11.53 16.738 18.815 11.53 30.39z"
        fill="#fff"
      />
      <path
        d="M536.86 311.476c-13.148 29.224-47.5 42.257-76.724 29.108s-42.257-47.5-29.108-76.724 47.5-42.256 76.724-29.108 42.256 47.5 29.108 76.724z"
      />
      <path
        d="M521.887 294.351c-5.208 11.576-18.815 16.738-30.39 11.53s-16.738-18.815-11.53-30.39 18.814-16.739 30.39-11.53 16.738 18.814 11.53 30.39z"
        fill="#fff"
      />
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-button"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
        viewBox="0 0 75 75"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          stroke="#fff"
          stroke-width="5"
        >
          <path
            class="sound-waves"
            d="M27.152 49a19.5 19.5 0 010-21.4m-7.1 28.5a30 30 0 010-35.6m-6.5 42.1a38.8 38.8 0 010-48.6"
            stroke-linecap="round"
          />
          <path
            class="speaker"
            d="M36.5 62.75l17.154-14.837h16.235V28.82H53.9L36.5 13.769V62.75z"
            stroke-linejoin="round"
          />
        </g>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Playingfield > should have paused attribute when game is paused 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 0.25;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="inactive"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
      viewBox="0 0 727.27 672.28"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M27.6 20.468l33.291 176.56c-25.782 43.408-40.424 93.001-40.424 145.65 0 170.698 153.612 309.13 343.014 309.13s343.314-138.432 343.314-309.13c0-51.001-14.048-99.068-38.344-141.488l33.29-176.267-140.3 65.096c-55.923-35.652-124.3-56.773-197.964-56.773-71.515 0-137.92 19.725-192.909 53.503L27.634 20.468z"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="40.9398"
      />
      <path
        d="M27.6 20.468l33.291 176.56c-25.782 43.408-40.424 93.001-40.424 145.65 0 170.698 153.612 309.13 343.014 309.13s343.314-138.432 343.314-309.13c0-51.001-14.048-99.068-38.344-141.488l33.29-176.267-140.3 65.096c-55.923-35.652-124.3-56.773-197.964-56.773-71.515 0-137.92 19.725-192.909 53.503L27.634 20.468z"
        fill="currentColor"
        stroke="#000"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="27.1430874"
      />
      <path
        d="M203.457 460.98c4.913 37.194 27.016 75.295 76.094 76.094 65.228 1.077 118.616-69.994 134.296-119.729-35.881-5.191-71.76-4.908-107.645-1.597 15.686 47.343 71.072 120.445 125.529 121.325 52.244.845 70.198-33.504 76.093-76.093"
        fill="none"
        stroke="#000"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="19.023360399999998"
      />
      <path
        d="M298.659 311.96c-13.149 29.225-47.5 42.257-76.724 29.109s-42.257-47.5-29.109-76.724 47.5-42.257 76.724-29.108 42.257 47.5 29.109 76.724z"
      />
      <path
        d="M283.686 294.838c-5.209 11.575-18.815 16.737-30.39 11.53s-16.739-18.815-11.53-30.391 18.814-16.738 30.39-11.53 16.738 18.815 11.53 30.39z"
        fill="#fff"
      />
      <path
        d="M536.86 311.476c-13.148 29.224-47.5 42.257-76.724 29.108s-42.257-47.5-29.108-76.724 47.5-42.256 76.724-29.108 42.256 47.5 29.108 76.724z"
      />
      <path
        d="M521.887 294.351c-5.208 11.576-18.815 16.738-30.39 11.53s-16.738-18.815-11.53-30.39 18.814-16.739 30.39-11.53 16.738 18.814 11.53 30.39z"
        fill="#fff"
      />
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-button"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
        viewBox="0 0 75 75"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          stroke="#fff"
          stroke-width="5"
        >
          <path
            class="sound-waves"
            d="M27.152 49a19.5 19.5 0 010-21.4m-7.1 28.5a30 30 0 010-35.6m-6.5 42.1a38.8 38.8 0 010-48.6"
            stroke-linecap="round"
          />
          <path
            class="speaker"
            d="M36.5 62.75l17.154-14.837h16.235V28.82H53.9L36.5 13.769V62.75z"
            stroke-linejoin="round"
          />
        </g>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Playingfield > should match snapshot 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="active"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
      viewBox="0 0 727.27 672.28"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M27.6 20.468l33.291 176.56c-25.782 43.408-40.424 93.001-40.424 145.65 0 170.698 153.612 309.13 343.014 309.13s343.314-138.432 343.314-309.13c0-51.001-14.048-99.068-38.344-141.488l33.29-176.267-140.3 65.096c-55.923-35.652-124.3-56.773-197.964-56.773-71.515 0-137.92 19.725-192.909 53.503L27.634 20.468z"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="40.9398"
      />
      <path
        d="M27.6 20.468l33.291 176.56c-25.782 43.408-40.424 93.001-40.424 145.65 0 170.698 153.612 309.13 343.014 309.13s343.314-138.432 343.314-309.13c0-51.001-14.048-99.068-38.344-141.488l33.29-176.267-140.3 65.096c-55.923-35.652-124.3-56.773-197.964-56.773-71.515 0-137.92 19.725-192.909 53.503L27.634 20.468z"
        fill="currentColor"
        stroke="#000"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="27.1430874"
      />
      <path
        d="M203.457 460.98c4.913 37.194 27.016 75.295 76.094 76.094 65.228 1.077 118.616-69.994 134.296-119.729-35.881-5.191-71.76-4.908-107.645-1.597 15.686 47.343 71.072 120.445 125.529 121.325 52.244.845 70.198-33.504 76.093-76.093"
        fill="none"
        stroke="#000"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="19.023360399999998"
      />
      <path
        d="M298.659 311.96c-13.149 29.225-47.5 42.257-76.724 29.109s-42.257-47.5-29.109-76.724 47.5-42.257 76.724-29.108 42.257 47.5 29.109 76.724z"
      />
      <path
        d="M283.686 294.838c-5.209 11.575-18.815 16.737-30.39 11.53s-16.739-18.815-11.53-30.391 18.814-16.738 30.39-11.53 16.738 18.815 11.53 30.39z"
        fill="#fff"
      />
      <path
        d="M536.86 311.476c-13.148 29.224-47.5 42.257-76.724 29.108s-42.257-47.5-29.108-76.724 47.5-42.256 76.724-29.108 42.256 47.5 29.108 76.724z"
      />
      <path
        d="M521.887 294.351c-5.208 11.576-18.815 16.738-30.39 11.53s-16.738-18.815-11.53-30.39 18.814-16.739 30.39-11.53 16.738 18.814 11.53 30.39z"
        fill="#fff"
      />
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-button"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
        viewBox="0 0 75 75"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          stroke="#fff"
          stroke-width="5"
        >
          <path
            class="sound-waves"
            d="M27.152 49a19.5 19.5 0 010-21.4m-7.1 28.5a30 30 0 010-35.6m-6.5 42.1a38.8 38.8 0 010-48.6"
            stroke-linecap="round"
          />
          <path
            class="speaker"
            d="M36.5 62.75l17.154-14.837h16.235V28.82H53.9L36.5 13.769V62.75z"
            stroke-linejoin="round"
          />
        </g>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Playingfield should have no paused attribute when game is running 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="active"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
    >
      SVG markup
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-control"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
      >
        SVG markup
      </svg>
    </button>
  </div>
</div>
`;

exports[`Playingfield should have paused attribute when game is paused 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 0.25;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="inactive"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
    >
      SVG markup
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-control"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
      >
        SVG markup
      </svg>
    </button>
  </div>
</div>
`;

exports[`Playingfield should match snapshot 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="active"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
    >
      SVG markup
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-control"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
      >
        SVG markup
      </svg>
    </button>
  </div>
</div>
`;
